CustomObjects/objects/blng__UsageSummary__c.object
<CustomObject>
    <fields>
        <fullName>blng__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>AccountUsageSummary</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__AppliedUnitPrice__c</fullName>
        <label>Applied Unit Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>blng__BilledQuantity__c</fullName>
        <label>Billed Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>blng__BilledRevenue__c</fullName>
        <label>Billed Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>blng__GroupedQuantity__c</fullName>
        <label>Grouped Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>blng__InvoiceLine__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Invoice Line</label>
        <referenceTo>blng__InvoiceLine__c</referenceTo>
        <relationshipName>InvoiceLineUsageMediations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__Invoice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Invoice</label>
        <referenceTo>blng__Invoice__c</referenceTo>
        <relationshipName>InvoiceUsageMediations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__OrderProduct__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order Product</label>
        <referenceTo>OrderItem</referenceTo>
        <relationshipName>OrderProductUsageMediations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order</label>
        <referenceTo>Order</referenceTo>
        <relationshipName>OrderUsageMediations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>blng__UsageSummaryStatus</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>blng__Subtotal__c</fullName>
        <label>Unbilled Subtotal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>blng__SummaryEndDate__c</fullName>
        <label>Summary End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>blng__SummaryStartDate__c</fullName>
        <label>Summary Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>blng__TotalQuantity__c</fullName>
        <label>Total Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>blng__TotalRevenue__c</fullName>
        <label>Total Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>blng__UnbilledQuantity__c</fullName>
        <label>Unbilled Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>blng__UnbilledRevenue__c</fullName>
        <label>Unbilled Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>blng__UniqueId__c</fullName>
        <externalId>true</externalId>
        <label>Unique Id</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>blng__UnitPrice__c</fullName>
        <label>Unit Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>blng__UsageCount__c</fullName>
        <label>Usage Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Usage Summary</label>
    <listViews>
        <fullName>blng__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>US-{0000}</displayFormat>
        <label>Usage Summary</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Usage Summaries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>